20060504
 - (dtucker) [auth-pam.c groupaccess.c monitor.c monitor_wrap.c scard-opensc.c
   session.c ssh-rand-helper.c sshd.c openbsd-compat/bsd-cygwin_util.c
   openbsd-compat/setproctitle.c] Convert malloc(foo*bar) -> calloc(foo,bar)
   in Portable-only code; since calloc zeros, remove now-redundant memsets.
   Also add a couple of sanity checks.  With & ok djm@

20060503
 - (dtucker) [packet.c] Remove in_systm.h since it's also in includes.h
   and double including it on IRIX 5.3 causes problems.  From Georg Schwarz,
   "no objections" tim@

20060423
 - (djm) OpenBSD CVS Sync
   - deraadt@cvs.openbsd.org 2006/04/01 05:42:20
     [scp.c]
     minimal lint cleanup (unused crud, and some size_t); ok djm
   - djm@cvs.openbsd.org 2006/04/01 05:50:29
     [scp.c]
     xasprintification; ok deraadt@
   - djm@cvs.openbsd.org 2006/04/01 05:51:34
     [atomicio.c]
     ANSIfy; requested deraadt@
   - dtucker@cvs.openbsd.org 2006/04/02 08:34:52
     [ssh-keysign.c]
     sessionid can be 32 bytes now too when sha256 kex is used; ok djm@
   - djm@cvs.openbsd.org 2006/04/03 07:10:38
     [gss-genr.c]
     GSSAPI buffers shouldn't be nul-terminated, spotted in bugzilla #1066
     by dleonard AT vintela.com. use xasprintf() to simplify code while in
     there; "looks right" deraadt@
   - djm@cvs.openbsd.org 2006/04/16 00:48:52
     [buffer.c buffer.h channels.c]
     Fix condition where we could exit with a fatal error when an input
     buffer became too large and the remote end had advertised a big window.
     The problem was a mismatch in the backoff math between the channels code
     and the buffer code, so make a buffer_check_alloc() function that the
     channels code can use to propsectivly check whether an incremental
     allocation will succeed.  bz #1131, debugged with the assistance of
     cove AT wildpackets.com; ok dtucker@ deraadt@
   - djm@cvs.openbsd.org 2006/04/16 00:52:55
     [atomicio.c atomicio.h]